Fix for nav justifcation on responsive collapse to center

--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,7 @@ a {
 }
 
 .nav-pills > li + li {
-  margin-right: 1rem;
+  /* margin-right: 1rem; */
 }
 
 .nav-pills .nav-link.active, .nav-pills .show>.nav-link {
